--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,22 @@ hr {
     text-align: right;
     width: 50%;
 }
+
+.footer {
+    text-align: center;
+}
+
+.footer-link:visited {
+    color: black;
+}
+
+.footer-link:hover {
+    color:  brown;
+}
+.footer-link:active {
+    color: brown;
+}
+
+address {
+    font-size: 0.8em;
+}
